# RatRace

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
meshes/: transition4to1.off
src/: CMakeLists.txt  main.cpp  workingDirectory.h.in
src/BackgroundGrid/: BackgroundGrid.cpp  BackgroundGrid.h  CMakeLists.txt  SizeGrid.cpp  SizeGrid.h
src/RatRace/: DiscreteMeshOptimization.cu  DualHybridGraph.cpp  DualHybridGraph.h  MeshHeader.h  MeshOptimization.cpp  MeshOptimization.h  PolySurfMesh.cpp  PolySurfMesh.h  QualityMetrics.h  RatRace.cpp  RatRace.h  blossom_quad.cpp  blossom_quad.h  graph_classes.h  precision.h  registerDMO.cu
src/Stopwatch/: Stopwatch.cpp  Stopwatch.h
